src/SFA.DAS.EAS.Web/src/sass/_tables.scss
table {
    margin-bottom: 20px;
    td.numeric {
        font-size:inherit
    }
    caption {
        text-align: left;
    }
}

td.link-right {
    text-align: right;
    padding-right: 0;
    width: 10%;
}

td.link-action {
    text-align: right;
    width: 10%;
}

table th, table td {
    vertical-align: top;
    @include media(tablet) {

    }
}

tr.total {
    th {
        border: none;
    }
    td {
        border-bottom: 2px solid $black;
        font-weight: 700;
    }
}

.nowrap,
.no-wrap {
    white-space: nowrap;
}

.description {
    font-size: 90%;
    display:inline-block;
    line-height: 1.3;
}

.force-word-wrap {
    max-width: 300px;
    overflow-wrap: break-word;
    word-wrap: break-word;
    -ms-word-break: break-all;
    word-break: break-all;
    word-break: break-word;
}

.table-address {
    max-width: 300px;
    display: inline-block;
}

table.organisations {
    td {
        width: 30%;
    }
    td + td + td {
        width: 20%;
    }
}

table.edited-changes {
    td.changed-item {
        font-weight: 700;
        font-size: 105%;
    }
}

table.details-list {
    border-top: 1px solid $border-colour;
    th {
        width: 55%;
        font-weight: normal;
    }
}



td, th {
    &.highlight {
        background: $grey-3;
    }
}

// Responsive Tables 

table.responsive {
    thead {
        display: none;
    }
    tr {
        border: 1px solid $border-colour;
        margin-bottom: 10px;
        display: block;
        float: left;
        width: 100%;
        box-sizing: border-box;
        td {
            display: block;
            text-align: right;
            clear:left;
            float:left;
            width: 100%;
            padding: 10px 10px 8px;
            box-sizing: border-box;
            border-bottom: 1px dotted $border-colour;
            &:before {
                content: attr(data-label);
                float: left;
                font-weight: bold;
                padding-right: 10px;
            }
            &:last-child {
                border-bottom: none;
            }
            &:empty {
                display: none;
            }
        }
        &.total {
            border: 2px solid #000;
        }
    }
}

@include media(tablet) {
    table.responsive {
        thead {
            display: table-header-group;
        }
        tr {
            display: table-row;
            border:none;
            float: none;
            margin: 0;
            th, td {
                display: table-cell;
                text-align: left;
                float: none;
                clear: none;
                padding: 0.6em 1em 0.5em;
                border-bottom-style: solid;
                width: auto;
                &:first-child {
                    padding-left: 0;
                }
                &:last-child {
                    padding-right: 0;
                }
                &:before {
                    display: none;
                }
                &.numeric {
                    text-align: right;
                }
                &.colgroup {
                    text-align: center
                }
                &:last-child {
                    border-bottom: 1px solid $border-colour;
                } 
            }
            &.total {
                border: none;
                td {
                    border-bottom: none;
                    &.total {
                        border-bottom: 2px solid #000;
                    }
                }
            }
        }
    }

    @for $i from 1 through 14 {
        table.responsive tr th.tw-#{$i * 5} {
            width: $i * 5%;
        }
    }

}

